[package]
name = "bit-garden"
version = "0.1.0"
authors = ["smuts"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.7.3"
ash = "0.31.0"
rocket = "0.5.0-rc.1"
wyzoid = {path = "wyzoid"}

[dependencies.sdl2]
version = "0.34"
default-features = false
features = ["ttf"]


